qt/gen_qgraphicseffect.h

class QGraphicsEffect;
class QMetaObject;
class QObject;
class QRectF;
typedef struct QBrush QBrush;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QGraphicsDropShadowEffect QGraphicsDropShadowEffect;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QGraphicsOpacityEffect QGraphicsOpacityEffect;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QRectF QRectF;
typedef struct QTimerEvent QTimerEvent;
bool QGraphicsDropShadowEffect_override_virtual_boundingRectFor(void* self, intptr_t slot);
bool QGraphicsDropShadowEffect_override_virtual_draw(void* self, intptr_t slot);
void QGraphicsDropShadowEffect_virtualbase_draw(void* self, QPainter* painter);
bool QGraphicsDropShadowEffect_override_virtual_sourceChanged(void* self, intptr_t slot);
void QGraphicsDropShadowEffect_virtualbase_sourceChanged(void* self, int flags);
bool QGraphicsDropShadowEffect_override_virtual_event(void* self, intptr_t slot);
bool QGraphicsDropShadowEffect_virtualbase_event(void* self, QEvent* event);
bool QGraphicsDropShadowEffect_override_virtual_eventFilter(void* self, intptr_t slot);
bool QGraphicsDropShadowEffect_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QGraphicsDropShadowEffect_override_virtual_timerEvent(void* self, intptr_t slot);
void QGraphicsDropShadowEffect_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QGraphicsDropShadowEffect_override_virtual_childEvent(void* self, intptr_t slot);
void QGraphicsDropShadowEffect_virtualbase_childEvent(void* self, QChildEvent* event);
bool QGraphicsDropShadowEffect_override_virtual_customEvent(void* self, intptr_t slot);
void QGraphicsDropShadowEffect_virtualbase_customEvent(void* self, QEvent* event);
bool QGraphicsDropShadowEffect_override_virtual_connectNotify(void* self, intptr_t slot);
void QGraphicsDropShadowEffect_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QGraphicsDropShadowEffect_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QGraphicsDropShadowEffect_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QGraphicsDropShadowEffect_staticMetaObject();
void QGraphicsDropShadowEffect_delete(QGraphicsDropShadowEffect* self);
QGraphicsOpacityEffect* QGraphicsOpacityEffect_new();
QGraphicsOpacityEffect* QGraphicsOpacityEffect_new2(QObject* parent);
QMetaObject* QGraphicsOpacityEffect_metaObject(const QGraphicsOpacityEffect* self);
void* QGraphicsOpacityEffect_metacast(QGraphicsOpacityEffect* self, const char* param1);
int QGraphicsOpacityEffect_metacall(QGraphicsOpacityEffect* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsOpacityEffect_tr(const char* s);
struct miqt_string QGraphicsOpacityEffect_trUtf8(const char* s);
double QGraphicsOpacityEffect_opacity(const QGraphicsOpacityEffect* self);
QBrush* QGraphicsOpacityEffect_opacityMask(const QGraphicsOpacityEffect* self);
void QGraphicsOpacityEffect_setOpacity(QGraphicsOpacityEffect* self, double opacity);
void QGraphicsOpacityEffect_setOpacityMask(QGraphicsOpacityEffect* self, QBrush* mask);
void QGraphicsOpacityEffect_opacityChanged(QGraphicsOpacityEffect* self, double opacity);
void QGraphicsOpacityEffect_connect_opacityChanged(QGraphicsOpacityEffect* self, intptr_t slot);
void QGraphicsOpacityEffect_opacityMaskChanged(QGraphicsOpacityEffect* self, QBrush* mask);
void QGraphicsOpacityEffect_connect_opacityMaskChanged(QGraphicsOpacityEffect* self, intptr_t slot);
struct miqt_string QGraphicsOpacityEffect_tr2(const char* s, const char* c);
struct miqt_string QGraphicsOpacityEffect_tr3(const char* s, const char* c, int n);
struct miqt_string QGraphicsOpacityEffect_trUtf82(const char* s, const char* c);
struct miqt_string QGraphicsOpacityEffect_trUtf83(const char* s, const char* c, int n);
bool QGraphicsOpacityEffect_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QGraphicsOpacityEffect_virtualbase_metaObject(const void* self);
bool QGraphicsOpacityEffect_override_virtual_metacast(void* self, intptr_t slot);
void* QGraphicsOpacityEffect_virtualbase_metacast(void* self, const char* param1);
bool QGraphicsOpacityEffect_override_virtual_metacall(void* self, intptr_t slot);
int QGraphicsOpacityEffect_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QGraphicsOpacityEffect_override_virtual_draw(void* self, intptr_t slot);
void QGraphicsOpacityEffect_virtualbase_draw(void* self, QPainter* painter);
bool QGraphicsOpacityEffect_override_virtual_boundingRectFor(void* self, intptr_t slot);
QRectF* QGraphicsOpacityEffect_virtualbase_boundingRectFor(const void* self, QRectF* sourceRect);
bool QGraphicsOpacityEffect_override_virtual_sourceChanged(void* self, intptr_t slot);
void QGraphicsOpacityEffect_virtualbase_sourceChanged(void* self, int flags);
bool QGraphicsOpacityEffect_override_virtual_event(void* self, intptr_t slot);
bool QGraphicsOpacityEffect_virtualbase_event(void* self, QEvent* event);
bool QGraphicsOpacityEffect_override_virtual_eventFilter(void* self, intptr_t slot);
bool QGraphicsOpacityEffect_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QGraphicsOpacityEffect_override_virtual_timerEvent(void* self, intptr_t slot);
void QGraphicsOpacityEffect_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QGraphicsOpacityEffect_override_virtual_childEvent(void* self, intptr_t slot);
void QGraphicsOpacityEffect_virtualbase_childEvent(void* self, QChildEvent* event);
bool QGraphicsOpacityEffect_override_virtual_customEvent(void* self, intptr_t slot);
void QGraphicsOpacityEffect_virtualbase_customEvent(void* self, QEvent* event);
bool QGraphicsOpacityEffect_override_virtual_connectNotify(void* self, intptr_t slot);
void QGraphicsOpacityEffect_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QGraphicsOpacityEffect_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QGraphicsOpacityEffect_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QGraphicsOpacityEffect_staticMetaObject();
void QGraphicsOpacityEffect_delete(QGraphicsOpacityEffect* self);