qt/gen_qgraphicseffect.nim

proc fcQGraphicsDropShadowEffect_override_virtual_boundingRectFor(self: pointer, slot: int) {.importc: "QGraphicsDropShadowEffect_override_virtual_boundingRectFor".}
proc fQGraphicsDropShadowEffect_virtualbase_draw(self: pointer, painter: pointer): void{.importc: "QGraphicsDropShadowEffect_virtualbase_draw".}
proc fcQGraphicsDropShadowEffect_override_virtual_draw(self: pointer, slot: int) {.importc: "QGraphicsDropShadowEffect_override_virtual_draw".}
proc fQGraphicsDropShadowEffect_virtualbase_sourceChanged(self: pointer, flags: cint): void{.importc: "QGraphicsDropShadowEffect_virtualbase_sourceChanged".}
proc fcQGraphicsDropShadowEffect_override_virtual_sourceChanged(self: pointer, slot: int) {.importc: "QGraphicsDropShadowEffect_override_virtual_sourceChanged".}
proc fQGraphicsDropShadowEffect_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QGraphicsDropShadowEffect_virtualbase_event".}
proc fcQGraphicsDropShadowEffect_override_virtual_event(self: pointer, slot: int) {.importc: "QGraphicsDropShadowEffect_override_virtual_event".}
proc fQGraphicsDropShadowEffect_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGraphicsDropShadowEffect_virtualbase_eventFilter".}
proc fcQGraphicsDropShadowEffect_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QGraphicsDropShadowEffect_override_virtual_eventFilter".}
proc fQGraphicsDropShadowEffect_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGraphicsDropShadowEffect_virtualbase_timerEvent".}
proc fcQGraphicsDropShadowEffect_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGraphicsDropShadowEffect_override_virtual_timerEvent".}
proc fQGraphicsDropShadowEffect_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGraphicsDropShadowEffect_virtualbase_childEvent".}
proc fcQGraphicsDropShadowEffect_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGraphicsDropShadowEffect_override_virtual_childEvent".}
proc fQGraphicsDropShadowEffect_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGraphicsDropShadowEffect_virtualbase_customEvent".}
proc fcQGraphicsDropShadowEffect_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGraphicsDropShadowEffect_override_virtual_customEvent".}
proc fQGraphicsDropShadowEffect_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsDropShadowEffect_virtualbase_connectNotify".}
proc fcQGraphicsDropShadowEffect_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGraphicsDropShadowEffect_override_virtual_connectNotify".}
proc fQGraphicsDropShadowEffect_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsDropShadowEffect_virtualbase_disconnectNotify".}
proc fcQGraphicsDropShadowEffect_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGraphicsDropShadowEffect_override_virtual_disconnectNotify".}
proc fcQGraphicsDropShadowEffect_staticMetaObject(): pointer {.importc: "QGraphicsDropShadowEffect_staticMetaObject".}
proc fcQGraphicsDropShadowEffect_delete(self: pointer) {.importc: "QGraphicsDropShadowEffect_delete".}
proc fcQGraphicsOpacityEffect_new(): ptr cQGraphicsOpacityEffect {.importc: "QGraphicsOpacityEffect_new".}
proc fcQGraphicsOpacityEffect_new2(parent: pointer): ptr cQGraphicsOpacityEffect {.importc: "QGraphicsOpacityEffect_new2".}
proc fcQGraphicsOpacityEffect_metaObject(self: pointer, ): pointer {.importc: "QGraphicsOpacityEffect_metaObject".}
proc fcQGraphicsOpacityEffect_metacast(self: pointer, param1: cstring): pointer {.importc: "QGraphicsOpacityEffect_metacast".}
proc fcQGraphicsOpacityEffect_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QGraphicsOpacityEffect_metacall".}
proc fcQGraphicsOpacityEffect_tr(s: cstring): struct_miqt_string {.importc: "QGraphicsOpacityEffect_tr".}
proc fcQGraphicsOpacityEffect_trUtf8(s: cstring): struct_miqt_string {.importc: "QGraphicsOpacityEffect_trUtf8".}
proc fcQGraphicsOpacityEffect_opacity(self: pointer, ): float64 {.importc: "QGraphicsOpacityEffect_opacity".}
proc fcQGraphicsOpacityEffect_opacityMask(self: pointer, ): pointer {.importc: "QGraphicsOpacityEffect_opacityMask".}
proc fcQGraphicsOpacityEffect_setOpacity(self: pointer, opacity: float64): void {.importc: "QGraphicsOpacityEffect_setOpacity".}
proc fcQGraphicsOpacityEffect_setOpacityMask(self: pointer, mask: pointer): void {.importc: "QGraphicsOpacityEffect_setOpacityMask".}
proc fcQGraphicsOpacityEffect_opacityChanged(self: pointer, opacity: float64): void {.importc: "QGraphicsOpacityEffect_opacityChanged".}
proc fQGraphicsOpacityEffect_connect_opacityChanged(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_connect_opacityChanged".}
proc fcQGraphicsOpacityEffect_opacityMaskChanged(self: pointer, mask: pointer): void {.importc: "QGraphicsOpacityEffect_opacityMaskChanged".}
proc fQGraphicsOpacityEffect_connect_opacityMaskChanged(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_connect_opacityMaskChanged".}
proc fcQGraphicsOpacityEffect_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QGraphicsOpacityEffect_tr2".}
proc fcQGraphicsOpacityEffect_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGraphicsOpacityEffect_tr3".}
proc fcQGraphicsOpacityEffect_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QGraphicsOpacityEffect_trUtf82".}
proc fcQGraphicsOpacityEffect_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGraphicsOpacityEffect_trUtf83".}
proc fQGraphicsOpacityEffect_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QGraphicsOpacityEffect_virtualbase_metaObject".}
proc fcQGraphicsOpacityEffect_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_override_virtual_metaObject".}
proc fQGraphicsOpacityEffect_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QGraphicsOpacityEffect_virtualbase_metacast".}
proc fcQGraphicsOpacityEffect_override_virtual_metacast(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_override_virtual_metacast".}
proc fQGraphicsOpacityEffect_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QGraphicsOpacityEffect_virtualbase_metacall".}
proc fcQGraphicsOpacityEffect_override_virtual_metacall(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_override_virtual_metacall".}
proc fQGraphicsOpacityEffect_virtualbase_draw(self: pointer, painter: pointer): void{.importc: "QGraphicsOpacityEffect_virtualbase_draw".}
proc fcQGraphicsOpacityEffect_override_virtual_draw(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_override_virtual_draw".}
proc fQGraphicsOpacityEffect_virtualbase_boundingRectFor(self: pointer, sourceRect: pointer): pointer{.importc: "QGraphicsOpacityEffect_virtualbase_boundingRectFor".}
proc fcQGraphicsOpacityEffect_override_virtual_boundingRectFor(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_override_virtual_boundingRectFor".}
proc fQGraphicsOpacityEffect_virtualbase_sourceChanged(self: pointer, flags: cint): void{.importc: "QGraphicsOpacityEffect_virtualbase_sourceChanged".}
proc fcQGraphicsOpacityEffect_override_virtual_sourceChanged(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_override_virtual_sourceChanged".}
proc fQGraphicsOpacityEffect_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QGraphicsOpacityEffect_virtualbase_event".}
proc fcQGraphicsOpacityEffect_override_virtual_event(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_override_virtual_event".}
proc fQGraphicsOpacityEffect_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGraphicsOpacityEffect_virtualbase_eventFilter".}
proc fcQGraphicsOpacityEffect_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_override_virtual_eventFilter".}
proc fQGraphicsOpacityEffect_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGraphicsOpacityEffect_virtualbase_timerEvent".}
proc fcQGraphicsOpacityEffect_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_override_virtual_timerEvent".}
proc fQGraphicsOpacityEffect_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGraphicsOpacityEffect_virtualbase_childEvent".}
proc fcQGraphicsOpacityEffect_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_override_virtual_childEvent".}
proc fQGraphicsOpacityEffect_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGraphicsOpacityEffect_virtualbase_customEvent".}
proc fcQGraphicsOpacityEffect_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_override_virtual_customEvent".}
proc fQGraphicsOpacityEffect_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsOpacityEffect_virtualbase_connectNotify".}
proc fcQGraphicsOpacityEffect_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_override_virtual_connectNotify".}
proc fQGraphicsOpacityEffect_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsOpacityEffect_virtualbase_disconnectNotify".}
proc fcQGraphicsOpacityEffect_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGraphicsOpacityEffect_override_virtual_disconnectNotify".}
proc fcQGraphicsOpacityEffect_staticMetaObject(): pointer {.importc: "QGraphicsOpacityEffect_staticMetaObject".}
proc fcQGraphicsOpacityEffect_delete(self: pointer) {.importc: "QGraphicsOpacityEffect_delete".}


func init*(T: type QGraphicsEffect, h: ptr cQGraphicsEffect): QGraphicsEffect =
  T(h: h)
proc create*(T: type QGraphicsEffect, ): QGraphicsEffect =

  QGraphicsEffect.init(fcQGraphicsEffect_new())
proc create*(T: type QGraphicsEffect, parent: gen_qobject.QObject): QGraphicsEffect =

  QGraphicsEffect.init(fcQGraphicsEffect_new2(parent.h))
proc metaObject*(self: QGraphicsEffect, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQGraphicsEffect_metaObject(self.h))

proc metacast*(self: QGraphicsEffect, param1: cstring): pointer =

  fcQGraphicsEffect_metacast(self.h, param1)

proc metacall*(self: QGraphicsEffect, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQGraphicsEffect_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QGraphicsEffect, s: cstring): string =

  let v_ms = fcQGraphicsEffect_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QGraphicsEffect, s: cstring): string =

  let v_ms = fcQGraphicsEffect_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc boundingRectFor*(self: QGraphicsEffect, sourceRect: gen_qrect.QRectF): gen_qrect.QRectF =

  gen_qrect.QRectF(h: fcQGraphicsEffect_boundingRectFor(self.h, sourceRect.h))

proc boundingRect*(self: QGraphicsEffect, ): gen_qrect.QRectF =

  gen_qrect.QRectF(h: fcQGraphicsEffect_boundingRect(self.h))

proc isEnabled*(self: QGraphicsEffect, ): bool =

  fcQGraphicsEffect_isEnabled(self.h)

proc setEnabled*(self: QGraphicsEffect, enable: bool): void =

  fcQGraphicsEffect_setEnabled(self.h, enable)

proc update*(self: QGraphicsEffect, ): void =

  fcQGraphicsEffect_update(self.h)

proc enabledChanged*(self: QGraphicsEffect, enabled: bool): void =

  fcQGraphicsEffect_enabledChanged(self.h, enabled)

proc miqt_exec_callback_QGraphicsEffect_enabledChanged(slot: int, enabled: bool) {.exportc.} =
  type Cb = proc(enabled: bool)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = enabled


  nimfunc[](slotval1)
